syntax = "proto3";

package game.v1;

option go_package = "github.com/Amobe/PlayGame/server/gen/proto/go/game/v1;gamev1";

service GameService {
  rpc NewBattle(NewBattleRequest) returns (NewBattleResponse) {}
  rpc Fight(FightRequest) returns (FightResponse) {}
}

message NewBattleRequest {
  string stage_id = 1;
}

message NewBattleResponse {
  string battle_id = 1;
}

message FightRequest {
  string battle_id = 1;
}

message FightResponse {
  repeated FightAffect affects = 1;
}

message FightAffect {
  int32 actor_idx = 1;
  int32 target_idx = 2;
  string skill = 3;
  repeated Attribute attributes = 4;
}

message Attribute {
  string type = 1;
  string value = 2;
}